crates/plotnik-lib/tests/snapshots/conformance__alt_branch_nested_scope_capture_keeps_top_level_null.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement [(number) @x  {(identifier) @x} @row]))

==== source ====
foo

==== types ====
export interface QRow {
  x: Node;
}

export interface Q {
  row: QRow | null;
  x: Node | null;
}

==== result ====
{"x":null,"row":{"x":{"kind":"identifier","text":"foo","span":[0, 3]}}}
