crates/plotnik-lib/tests/snapshots/conformance__alternation_in_child_position.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program [(expression_statement) @expr])

==== source ====
a;

==== types ====
export interface Q {
  expr: Node;
}

==== result ====
{"expr":{"kind":"expression_statement","text":"a;","span":[0, 2]}}
