crates/plotnik-lib/tests/snapshots/conformance__anchor_after_mixed_alternation_named_branch_skips_anonymous_operator.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (binary_expression [(identifier) @left ";"] . (identifier) @right)))

==== source ====
a + /* c */ b

==== types ====
export interface Q {
  left: Node | null;
  right: Node;
}

==== result ====
{"left":{"kind":"identifier","text":"a","span":[0, 1]},"right":{"kind":"identifier","text":"b","span":[12, 13]}}
