crates/plotnik-lib/tests/snapshots/conformance__anchor_after_mixed_alternation_named_branch_skips_comma.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (call_expression arguments: (arguments [(identifier) @x ";"] . (identifier) @y))))

==== source ====
f(a, b)

==== types ====
export interface Q {
  x: Node | null;
  y: Node;
}

==== result ====
{"x":{"kind":"identifier","text":"a","span":[2, 3]},"y":{"kind":"identifier","text":"b","span":[5, 6]}}
