crates/plotnik-lib/tests/snapshots/conformance__anchor_before_alternation_in_sibling.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (binary_expression (identifier) @left . [(identifier) @right])))

==== source ====
a + b

==== types ====
export interface Q {
  left: Node;
  right: Node;
}

==== result ====
{"left":{"kind":"identifier","text":"a","span":[0, 1]},"right":{"kind":"identifier","text":"b","span":[4, 5]}}
