crates/plotnik-lib/tests/snapshots/conformance__anchored_nongreedy_star_follower_overshoots.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement)*? @b . (expression_statement (identifier == "foo")) @c})

==== source ====
bar; debugger; foo;

==== types ====
export interface Q {
  a: Node | null;
  b: Node[];
  c: Node;
}

==== result ====
<no match>
