crates/plotnik-lib/tests/snapshots/conformance__anchored_optional_follower_overshoots.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement)? @b . (expression_statement (identifier == "foo")) @c})

==== source ====
bar; debugger; foo;

==== types ====
export interface Q {
  a: Node | null;
  b: Node | null;
  c: Node;
}

==== result ====
<no match>
