crates/plotnik-lib/tests/snapshots/conformance__anchored_quantified_follower_overshoots.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement)* @b . (expression_statement (identifier == "foo")) @c})

==== source ====
bar; debugger; foo;

==== types ====
export interface Q {
  a?: Node;
  b: Node[];
  c: Node;
}

==== result ====
{"a":null,"b":[{"kind":"debugger_statement","text":"debugger;","span":[5, 14]}],"c":{"kind":"expression_statement","text":"foo;","span":[15, 19]}}
