crates/plotnik-lib/tests/snapshots/conformance__anchored_soft_quantified_follower_skips_comment.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement)* @b . (expression_statement (identifier == "foo")) @c})

==== source ====
/* c */ debugger; foo;

==== types ====
export interface Q {
  a: Node | null;
  b: Node[];
  c: Node;
}

==== result ====
{"a":null,"b":[{"kind":"debugger_statement","text":"debugger;","span":[8, 17]}],"c":{"kind":"expression_statement","text":"foo;","span":[18, 22]}}
